fixed content overflowing on food search modal on food search page

--- a/react-app/src/components/Food/FoodSearch/SearchBar.css
+++ b/react-app/src/components/Food/FoodSearch/SearchBar.css
@@ -70,7 +70,9 @@
 
 .food-search-container {
     margin-top: 100px;
-    height: 2120px;
+    height: auto;
+    padding-bottom: 30px;
+    min-height: 70vh;
     background-color: rgb(255, 255, 255, 0.7);
     border-radius: 10px;
 }
